--- a/res/layout/fragment_password_recover_step2.xml
+++ b/res/layout/fragment_password_recover_step2.xml
@@ -3,73 +3,71 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
-    
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:orientation="vertical" >
+
         <RelativeLayout
-                    
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:background="@color/login_background"
-                    android:orientation="horizontal">
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="@color/login_background"
+            android:orientation="horizontal" >
 
-                    <ImageButton
-                        
-                        android:id="@+id/wallet_back"
-                        android:layout_width="wrap_content"
-                        android:layout_height="50dp"
-                        android:background="#ff0099cc"
-                        android:src="@drawable/fanhui_02" />
+            <ImageButton
+                android:id="@+id/wallet_back"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:background="#ff0099cc"
+                android:src="@drawable/fanhui_02" />
 
-                    <TextView
-                        android:id="@+id/title"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerHorizontal="true"
-                        android:layout_centerVertical="true"
-                        android:text="修改密码"
-                        android:textColor="@color/white"
-                        android:textSize="20sp" />
-                </RelativeLayout>
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:text="修改密码"
+                android:textColor="@color/white"
+                android:textSize="20sp" />
+        </RelativeLayout>
 
-  <!--  <fragment
+        <!--
+        <fragment
             android:id="@+id/input_verify"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             class="com.example.palmcampusmarket_client.fragment.inputcell.SimpleTextInputCellFragment3"
-            tools:layout="@layout/fragment_inputcell_simpletext3" /> -->     
-        
+            tools:layout="@layout/fragment_inputcell_simpletext3" />
+        -->
+
         <fragment
             android:id="@+id/input_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             class="com.example.palmcampusmarket_client.fragment.inputcell.SimpleTextInputCellFragment3"
             tools:layout="@layout/fragment_inputcell_simpletext3" />
-        
+
         <fragment
             android:id="@+id/input_password_repeat"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             class="com.example.palmcampusmarket_client.fragment.inputcell.SimpleTextInputCellFragment3"
             tools:layout="@layout/fragment_inputcell_simpletext3" />
-        
+
         <Button
-                android:id="@+id/btn_submit"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="提交"
-                android:layout_marginTop="10dp"
-                android:layout_marginLeft="50dp"
-                android:layout_marginRight="50dp"
-                android:background="@drawable/edit_bg"
-                android:textColor="#663333" />
-      
+            android:id="@+id/btn_submit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/edit_bg"
+            android:text="提交"
+            android:textColor="#663333" />
     </LinearLayout>
-    
 
 </FrameLayout>
-
