--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -41,6 +41,24 @@
         android:layout_height="wrap_content"
         class="com.example.palmcampusmarket_client.fragment.inputcell.SimpleTextInputCellFragment2"
         tools:layout="@layout/fragment_inputcell_simpletext2" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="20dp">
+        <CheckBox
+            android:id="@+id/remember_password"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginLeft="40dp"
+            android:text="记住密码"/>
+        <CheckBox
+            android:id="@+id/autologin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_gravity="right"
+            android:text="自动登录"/>
+        </LinearLayout>"
 
     <Button
         android:id="@+id/btn_login"
