--- a/res/layout/drawable_home.xml
+++ b/res/layout/drawable_home.xml
@@ -3,5 +3,5 @@
      <item  android:drawable="@drawable/home_new2" android:state_selected="true" />
      <item  android:drawable="@drawable/home_new2" android:state_focused="true"/>
      <item  android:drawable="@drawable/home_new2" android:state_pressed="true" />
-     <item android:drawable="@drawable/home"/> 
+     <item android:drawable="@drawable/home_new"/> 
 </selector> 
