--- a/res/layout/drawable_me.xml
+++ b/res/layout/drawable_me.xml
@@ -3,5 +3,5 @@
      <item  android:drawable="@drawable/me_new2" android:state_selected="true" />
      <item  android:drawable="@drawable/me_new2" android:state_focused="true"/>
      <item  android:drawable="@drawable/me_new2" android:state_pressed="true" />
-     <item android:drawable="@drawable/me"/> 
+     <item android:drawable="@drawable/me_new"/> 
 </selector> 
