--- a/res/layout/drawable_shoppingcart.xml
+++ b/res/layout/drawable_shoppingcart.xml
@@ -3,5 +3,5 @@
      <item  android:drawable="@drawable/shop_new2" android:state_selected="true" />
      <item  android:drawable="@drawable/shop_new2" android:state_focused="true"/>
      <item  android:drawable="@drawable/shop_new2" android:state_pressed="true" />
-     <item android:drawable="@drawable/shoppingcart"/> 
+     <item android:drawable="@drawable/shop_new"/> 
 </selector> 
