--- a/res/layout/drawable_star.xml
+++ b/res/layout/drawable_star.xml
@@ -3,5 +3,5 @@
      <item  android:drawable="@drawable/star_new2" android:state_selected="true" />
      <item  android:drawable="@drawable/star_new2" android:state_focused="true"/>
      <item  android:drawable="@drawable/star_new2" android:state_pressed="true" />
-     <item android:drawable="@drawable/collection"/> 
+     <item android:drawable="@drawable/star"/> 
 </selector> 
