--- a/res/layout/fragment_pag_addneeds.xml
+++ b/res/layout/fragment_pag_addneeds.xml
@@ -55,7 +55,7 @@
                 android:orientation="horizontal" >
 
                 <EditText
-                    android:id="@+id/edit"
+                    android:id="@+id/need_day"
                     android:layout_width="0dp"
                     android:layout_height="30dp"
                     android:layout_gravity="center_vertical"
