--- a/res/layout/activity_needs.xml
+++ b/res/layout/activity_needs.xml
@@ -9,6 +9,28 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical" >
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="@color/login_background"
+            android:orientation="horizontal" >
+
+            <ImageButton
+                android:id="@+id/needs_back"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:background="#ff0099cc"
+                android:src="@drawable/fanhui_02" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:text="需求中心"
+                android:textColor="@color/white"
+                android:textSize="20sp" />
+        </RelativeLayout>
 
 
         <ListView
