--- a/res/layout/activity_search.xml
+++ b/res/layout/activity_search.xml
@@ -21,6 +21,7 @@
                 android:layout_height="44dp"
                 android:layout_margin="3dp"
                 android:layout_toLeftOf="@+id/btn_search"
+                android:background="@drawable/search_edittext_shape"
                 android:hint="请输入内容" />
 
             <Button
