--- a/res/layout/activity_register.xml
+++ b/res/layout/activity_register.xml
@@ -6,38 +6,38 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="match_parent"
+        android:scrollbarThumbVertical="@android:color/transparent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@android:color/white"
             android:orientation="vertical" >
-                <RelativeLayout
-                    
-                    android:layout_width="match_parent"
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:background="@color/login_background"
+                android:orientation="horizontal" >
+
+                <ImageButton
+                    android:id="@+id/register_back"
+                    android:layout_width="wrap_content"
                     android:layout_height="50dp"
-                    android:background="@color/login_background"
-                    android:orientation="horizontal">
+                    android:background="#ff0099cc"
+                    android:src="@drawable/fanhui_02" />
 
-                    <ImageButton
-                        
-                        android:id="@+id/register_back"
-                        android:layout_width="wrap_content"
-                        android:layout_height="50dp"
-                        android:background="#ff0099cc"
-                        android:src="@drawable/fanhui_02" />
-
-                    <TextView
-                        android:id="@+id/title"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerHorizontal="true"
-                        android:layout_centerVertical="true"
-                        android:text="用户注册"
-                        android:textColor="@color/white"
-                        android:textSize="20sp" />
-                </RelativeLayout>
+                <TextView
+                    android:id="@+id/title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
+                    android:text="用户注册"
+                    android:textColor="@color/white"
+                    android:textSize="20sp" />
+            </RelativeLayout>
 
             <fragment
                 android:id="@+id/input_account"
@@ -88,18 +88,17 @@
                 class="com.example.palmcampusmarket_client.fragment.inputcell.PictureInputCellFragment"
                 tools:layout="@layout/fragment_input_commodity_picture" />
 
-          
             <Button
                 android:id="@+id/btn_submit"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="提交"
-                android:layout_marginTop="1dp"
+                android:layout_marginBottom="10dp"
                 android:layout_marginLeft="50dp"
                 android:layout_marginRight="50dp"
-                android:layout_marginBottom="10dp"
+                android:layout_marginTop="1dp"
                 android:background="@drawable/edit_bg"
+                android:text="提交"
                 android:textColor="#663333" />
         </LinearLayout>
     </ScrollView>
