--- a/res/layout/new_fragment_home_list2.xml
+++ b/res/layout/new_fragment_home_list2.xml
@@ -70,7 +70,8 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fillViewport="true" >
+        android:fillViewport="true"
+        android:scrollbarThumbVertical="@android:color/transparent" >
 
         <LinearLayout
             android:layout_width="match_parent"
