--- a/res/layout/drawable_eyes.xml
+++ b/res/layout/drawable_eyes.xml
@@ -1,7 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?> 
-<selector xmlns:android="http://schemas.android.com/apk/res/android"> 
-     <item  android:drawable="@drawable/eyes_open" android:state_selected="true" />
-     <item  android:drawable="@drawable/eyes_open" android:state_focused="true"/>
-     <item  android:drawable="@drawable/eyes_open" android:state_pressed="true" />
-     <item android:drawable="@drawable/eyes_close"/> 
-</selector> 
+<?xml version="1.0" encoding="utf-8"?>  
+<selector xmlns:android="http://schemas.android.com/apk/res/android">  
+    <item android:state_checked="true"   
+        android:drawable="@drawable/eyes_open" /><!--选中时效果-->  
+    <item android:state_checked="false"   
+        android:drawable="@drawable/eyes_close" /><!--未选中时效果-->  
+  <!-- 修改成你自己的图片就可以了 -->  
+</selector>
