--- a/res/layout/fragment_inputcell_simpletext4.xml
+++ b/res/layout/fragment_inputcell_simpletext4.xml
@@ -17,11 +17,13 @@
         android:layout_marginRight="5dp"
         android:layout_weight="2"
         android:background="@null" />
-    <ImageButton
+
+    <CheckBox
         android:id="@+id/showpassword"
+        android:button="@null"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
-        android:background="@layout/drawable_eyes"/>
-
+        android:background="@layout/drawable_eyes"
+        android:textColorLink="@android:color/transparent" />
 
 </LinearLayout>
